[package]
name = "bevy-banana"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Log optimization
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

bevy = "0.16.0"
